// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line component between stops with branches renders and matches snapshot 1`] = `
"<Provider store={{...}}>
  <Line from={{...}} to={{...}}>
    <line className=\\"line-diagram-svg__line\\" strokeWidth=\\"10px\\" x1=\\"11px\\" x2=\\"11px\\" y1=\\"17px\\" y2=\\"24px\\" />
    <line className=\\"line-diagram-svg__line\\" strokeWidth=\\"10px\\" x1=\\"27px\\" x2=\\"27px\\" y1=\\"17px\\" y2=\\"24px\\" />
    <line className=\\"line-diagram-svg__line\\" strokeWidth=\\"16px\\" x1=\\"43px\\" x2=\\"43px\\" y1=\\"17px\\" y2=\\"24px\\" />
  </Line>
</Provider>"
`;

exports[`Line component between stops with disruptions renders and matches snapshot 1`] = `
"<Provider store={{...}}>
  <Line from={{...}} to={{...}}>
    <line className=\\"line-diagram-svg__line\\" strokeWidth=\\"10px\\" x1=\\"11px\\" x2=\\"11px\\" y1=\\"17px\\" y2=\\"24px\\" stroke=\\"url(#diagonalHatch)\\" />
  </Line>
</Provider>"
`;

exports[`Line component renders and matches snapshot 1`] = `
"<Provider store={{...}}>
  <svg>
    <Line from={{...}} to={{...}}>
      <line className=\\"line-diagram-svg__line\\" strokeWidth=\\"10px\\" x1=\\"11px\\" x2=\\"11px\\" y1=\\"17px\\" y2=\\"24px\\" stroke=\\"url(#diagonalHatch)\\" />
    </Line>
  </svg>
</Provider>"
`;
